<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.admin.iposapp.controler.FtpSettingFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#144257">

        <!-- TODO: Update blank fragment layout -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etFTP"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/ftpHint"
            android:textAlignment="center"
            android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etUser"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:hint="@string/usernameHint"
            android:layout_margin="2dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etPassword"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etSeller"
            android:textAlignment="center"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/employeePathHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/editTextSoapServer"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/soapHint"
            android:layout_marginTop="40dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etUserSoap"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:hint="@string/soapFolder"
            android:layout_marginTop="0dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/etPasswordSoap"
            android:layout_gravity="center_horizontal|top"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:hint="@string/soapFolderPass"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/editTextAppUser"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/appUser"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/editTextAppUserPass"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/appUserPass"
            android:inputType="textPassword"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedshadow_et"
            android:id="@+id/editTextSellerSerie"
            android:textColorHint="#ffff"
            android:textColor="#ffff"
            android:hint="@string/serie"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/lastSaleTv"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedshadow_et"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/lastSale"
            android:textColorHint="#FFFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/lastClientAddedTv"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedshadow_et"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/lastClient"
            android:textColorHint="#FFFF"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Loading"
            custom:pb_textError="Error"
            custom:pb_colorError="@color/red_error"
            android:hint="@string/syncHint"
            android:textColorHint="#ffff"/>

    </LinearLayout>


</ScrollView>