<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeParent"
    xmlns:htext="http://schemas.android.com/apk/res-auto"
    android:background="#144257"
    tools:context=".controler.AddClientGeneralInfoFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#144257"
        tools:context=".controler.AddClientGeneralInfoFragment">

        <EditText

            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientNameEt"
            android:textColor="#ffff"
            android:hint="@string/clientNameStr"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText

            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientAdressEt"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientAdressStr"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="15dp"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientIntNumber"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientIntNumber"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:textSize="15dp"/>

        <EditText

            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientExtNumber"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientExtNumber"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:textSize="15dp"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientColonyEt"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientColonyStr"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientCityEt"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientCityStr"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientStateEt"
            android:textColor="#ffff"
            android:hint="@string/clientStateStr"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientCountryEt"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientCountryStr"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientPostalCodeEt"
            android:layout_gravity="center_horizontal|top"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:hint="@string/clientPostalCodeStr"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:textSize="15dp"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientRfcEt"
            android:textColor="#ffff"
            android:hint="@string/clientRfcStr"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientMail1Et"
            android:textColor="#ffff"
            android:hint="@string/clientMail1Str"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientMail2Et"
            android:textColor="#ffff"
            android:hint="@string/clientMail2Str"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientPhone1Et"
            android:textColor="#ffff"
            android:hint="@string/clientPhone1Str"
            android:textAlignment="center"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientPhone2Et"
            android:textColor="#ffff"
            android:hint="@string/clientPhone2Str"
            android:textAlignment="center"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientContact1Et"
            android:textColor="#ffff"
            android:hint="@string/clientContact1Str"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientContact2Et"
            android:textColor="#ffff"
            android:hint="@string/clientContact2Str"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:singleLine="true"
            android:overScrollMode="always"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:background="@drawable/rounded_information_et"
            android:textColorHint="#757575"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:id="@+id/clientInBetweenStreets"
            android:textColor="#ffff"
            android:hint="@string/inBetweenStreets"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
    <de.halfbit.fabuless.FabView
        android:id="@+id/fab"
        android:enabled="false"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingTop="3dp"
        android:src="@mipmap/save"
        htext:fabuless_attachTo="@id/relativeParent"
        htext:fabuless_attachAt="bottom_right"
        htext:fabuless_attachType="inside"
        htext:fabuless_size="normal"
        htext:fabuless_padding="16dp"
        htext:elevation = "6dp"
        htext:fabuless_revealAfterMs="500"
        />
</RelativeLayout>
