<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".controler.LogInActivity"
    android:background="#144257"
    android:weightSum="1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:background="@drawable/roundedrectangle"
        android:layout_gravity="center"
        android:id="@+id/relativeLayout3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/userET"
            android:background="@drawable/top_edittext_bg"
            android:textColor="#ffff"
            android:textColorLink="#ffff"
            android:textAlignment="center"
            android:textColorHint="#ffff"
            android:hint="@string/prompt_email"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/pswdET"
            android:layout_alignStart="@+id/pswdET"
            android:layout_marginTop="30dp"
            android:text="sistemas"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pswdET"
            android:background="@drawable/bottom_edittext_bg"
            android:textColor="#ffff"
            android:hint="@string/prompt_password"
            android:textColorHint="#ffff"
            android:textAlignment="center"
            android:layout_below="@+id/userET"
            android:layout_centerHorizontal="true"
            android:text="kabu"/>
        <info.hoang8f.widget.FButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fbutton:buttonColor="#252e32"
            fbutton:shadowColor="#144257"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:textColor="#ffff"
            android:textAlignment="center"
            android:text="@string/action_sign_in_short"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/pswdET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tViewTermsConditions"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="@string/terms_and_conditions"
        android:textColorHint="#bfc2c3" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src = "@mipmap/material_logo"
        android:id="@+id/imageView2"
        android:layout_above="@+id/relativeLayout3"
        android:layout_marginBottom="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
